llvm/test/tools/llubi/lib_cxx_memory_large_size.ll
; NOTE: Assertions have been autogenerated by utils/update_llubi_test_checks.py UTC_ARGS: --version 6
; RUN: not llubi --verbose --max-mem=100 < %s 2>&1 | FileCheck %s

declare ptr @_Znwm(i64) ; new(unsigned long)

define i32 @main() {
  %ptr_1 = call ptr @_Znwm(i64 50)
  %ptr_2 = call ptr @_Znwm(i64 100)

  ret i32 0
}
; CHECK: Entering function: main
; CHECK-NEXT:   %ptr_1 = call ptr @_Znwm(i64 50) => ptr 0x10 [ptr_1]
; CHECK-NEXT: Stacktrace:
; CHECK-NEXT: #0   %ptr_2 = call ptr @_Znwm(i64 100) at @main
; CHECK-NEXT: Error: Insufficient heap space.
; CHECK-NEXT: error: Execution of function 'main' failed.
